# Localization

./: CMakeLists.txt  onnx_export.ipynb
src/: netvlad.cc  netvlad_onnx.cc
